fix margin when omarchy update icon visible

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -56,6 +56,10 @@
     margin: 0 7.5px;
 }
 
+#custom-update {
+  margin-right: 2px;
+}
+
 #tray {
     margin-right: 16px;
 }
